# MMAP

./: .gitignore  README.md  pyproject.toml
configs/: custom_data.example.yaml  default_config.yaml  fewshot.yaml  optimizer.yaml  refactored_config.yaml  smoke.yaml
data/: custom_ground_truth.example.jsonl  custom_samples.example.jsonl  ground_truth.jsonl  samples_multi_image.jsonl  smoke_samples.jsonl
docs/: code_review_report.md  correctness_audit.md  design.md  pr33_stabilization.md  refactoring_summary.md
mmap_optimizer/: __init__.py  __main__.py  analysis_prompt_optimization_stage.py  analysis_runner.py  cli.py  config.py  extraction_prompt_optimization_stage.py  logging.py  patch_tester.py  patches.py  prompt_optimization_phase.py  prompt_structuring_phase.py  prompt_test_runner.py  prompts.py  runners.py  sampler.py  structured_prompt.py
prompts/: README.md  analysis.txt  analysis_reflection.txt  analysis_task.txt  extraction.txt  output_repair.txt  patch_calibration.txt  patch_generation.txt  patch_merge.txt  patch_root_merge.txt  patch_text_match.txt  prompt_compression.txt  prompt_compression_validation.txt  prompt_standardization.txt  semantic_patch_generation.txt  semantic_patch_translation.txt
scenarios/: README.md
schemas/: extraction_output_schema.json
tests/: _compat.py  test_analysis_parser.py  test_analysis_runner_user_content.py  test_auto_section_id_hints.py  test_checkpoint_resume.py  test_checkpoint_resume_rollback.py  test_cli_validate_config.py  test_compression.py  test_compression_consolidation_legacy_strategy.py  test_core.py  (+112 more)
(+294 files in other folders)
