[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mmap-optimizer"
version = "0.0.0"
description = "MMAP optimizer compression utilities"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["mmap_optimizer*"]

[tool.pytest.ini_options]
pythonpath = ["."]
