[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mmap-pipeline"
version = "0.1.0"
description = "Minimal prompt optimization loop with checkpoint/resume support."
requires-python = ">=3.10"

[project.scripts]
mmap-optimizer = "mmap_pipeline.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
